--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,5 +1,5 @@
 /** VARIABLES **/
-/** MAPS **/
+/** MAPS & LISTS **/
 .main-container {
   padding: 0;
   margin: 0;
@@ -112,15 +112,30 @@ body {
   z-index: 1;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
 }
+@media screen and (min-width: 1024px) {
+  .header {
+    padding: 30px 180px;
+  }
+}
+@media screen and (max-width: 1024px) and (min-width: 767px) {
+  .header {
+    padding: 30px 100px;
+  }
+}
 .header__logo {
   padding: 10px 0;
   width: 162px;
   height: 44px;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 767px) {
   .header__logo {
     width: 200px;
     height: 34px;
+  }
+}
+@media screen and (min-width: ) {
+  .header__logo {
+    padding: 30px;
   }
 }
 .header__back {
@@ -161,12 +176,41 @@ button:hover {
   flex-direction: column;
   padding: 22px 25px;
 }
+@media screen and (min-width: 767px) {
+  .footer {
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 64px 66px 30px 0;
+    align-items: center;
+    gap: 20px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .footer__order1 {
+    order: 3;
+  }
+}
+@media screen and (min-width: 767px) {
+  .footer__order2 {
+    order: 1;
+  }
+}
+@media screen and (min-width: 767px) {
+  .footer__order3 {
+    order: 2;
+  }
+}
 .footer__title {
   font-family: Shrikhand, "sans-serif";
   margin: 0;
   font-size: 18px;
   font-weight: 400;
   padding-bottom: 1em;
+}
+@media screen and (min-width: 767px) {
+  .footer__title {
+    padding: 0 0 0 9px;
+  }
 }
 .footer__content {
   list-style: none;
@@ -175,11 +219,12 @@ button:hover {
   padding: 0;
   margin: 0;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 767px) {
   .footer__content {
     flex-direction: row;
-    gap: 12px;
-    margin: 1em 0;
+    column-gap: 7px;
+    justify-content: space-between;
+    margin: 0;
   }
 }
 .footer__content a {
@@ -190,7 +235,7 @@ button:hover {
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto;
-  gap: 7px;
+  gap: 11px;
   align-items: center;
   justify-items: start;
   justify-content: start;
@@ -237,11 +282,11 @@ button:hover {
   font-size: 24px;
   font-weight: 700;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 767px) {
   .presentation__heading {
     padding: 30px 0;
     margin: 0;
-    font-size: 24px;
+    font-size: 40px;
     font-weight: 700;
     width: 100%;
   }
@@ -253,7 +298,7 @@ button:hover {
   color: #353535;
   margin: 0;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 767px) {
   .presentation__detail {
     padding-bottom: 30px;
   }
@@ -276,7 +321,7 @@ button:hover {
     padding: 30px 100px;
   }
 }
-@media screen and (max-width: 1440px) and (min-width: ) {
+@media screen and (min-width: 1024px) {
   .operation {
     padding: 30px 180px;
   }
@@ -286,6 +331,11 @@ button:hover {
     flex-direction: row;
     flex-wrap: wrap;
     padding: 30px 100px 50px;
+  }
+}
+@media screen and (min-width: 767px) and (min-width: 1024px) {
+  .operation {
+    padding: 30px 180px 50px;
   }
 }
 .operation__title {
@@ -364,7 +414,7 @@ button:hover {
     padding: 30px 100px;
   }
 }
-@media screen and (max-width: 1440px) and (min-width: ) {
+@media screen and (min-width: 1024px) {
   .restaurants {
     padding: 30px 180px;
   }
@@ -372,6 +422,15 @@ button:hover {
 @media screen and (min-width: 767px) {
   .restaurants {
     flex-direction: row;
+    flex-wrap: wrap;
+    padding: 30px 100px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .restaurants {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 30px 180px;
   }
 }
 .restaurants__title {
@@ -393,6 +452,7 @@ button:hover {
 @media screen and (min-width: 767px) {
   .restaurants__card {
     flex-direction: row;
+    flex-wrap: wrap;
     row-gap: 50px;
     column-gap: 100px;
   }
@@ -409,7 +469,6 @@ button:hover {
   height: 251px;
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
@@ -550,6 +609,10 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
 }
 
 /****** CONTENU PAGE RESTAURANT *******/
+.main-container--color {
+  background: #fff;
+}
+
 .image-hero {
   width: 100%;
   height: 237px;
@@ -579,6 +642,19 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   background-color: #F6F6F6;
   box-sizing: border-box;
   align-items: center;
+  padding: 32px 13px 40px;
+  width: 100%;
+}
+@media screen and (min-width: 767px) {
+  .menu {
+    padding: 32px 160px 40px;
+    width: 75%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    padding: 32px 210px 40px;
+  }
 }
 .menu__head {
   display: flex;
@@ -587,6 +663,13 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   gap: 40px;
   padding-right: 25px;
   box-sizing: border-box;
+}
+@media screen and (min-width: 1024px) {
+  .menu__head {
+    justify-content: space-between;
+    width: 75%;
+    gap: 24px;
+  }
 }
 .menu__head .title {
   font-family: Shrikhand, sans-serif;
@@ -695,74 +778,6 @@ input[type=checkbox]#like4:checked ~ .like-checked4 {
   100% {
     transform: scaleX(1);
     visibility: visible;
-  }
-}
-/******** MEDIA QUERIES *******/
-/**** VERSION MOBILE ****/
-/**** PAGE RESTAURANTS ****/
-.contenu {
-  z-index: 50;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.image-hero {
-  width: 100%;
-  height: 237px;
-  position: relative;
-}
-.image-hero img {
-  height: 275px;
-  width: 100%;
-  box-sizing: border-box;
-  object-fit: cover;
-}
-
-.menu {
-  padding: 32px 13px 40px;
-  width: 100%;
-}
-.menu__head {
-  width: 100%;
-  justify-content: space-between;
-}
-
-/**** VERSION TABLETTE & DESKTOP ****/
-@media screen and (min-width: 768px) {
-  /**** RESTAURANTS ****/
-  /**** FOOTER ****/
-  .footer {
-    padding: 22px 34px;
-    flex-direction: row-reverse;
-    gap: 25px;
-    align-items: center;
-    background-color: #353535;
-    font-size: 16px;
-    font-weight: 400;
-    color: #fff;
-  }
-  .footer__content {
-    flex-direction: row;
-    column-gap: 35px;
-    justify-content: space-between;
-  }
-  /****** CONTENU PAGE RESTAURANT *******/
-  .menu {
-    padding: 32px 210px 40px;
-    width: 75%;
-  }
-  .menu__head {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 24px;
-    box-sizing: border-box;
-  }
-  .menu__head .title {
-    font-family: Shrikhand, sans-serif;
-    font-size: 28px;
   }
 }
 
