--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 /** VARIABLES **/
 $color-bg: #F6F6F6;
 $color-bg-location: #EAEAEA;
+$color-bg-resto:#D2D2D2;
 $color-primary: #9356DC;
 $color-white: #fff;
 $color-badge: #99E2D0;
@@ -15,8 +16,10 @@ $shadow-button: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 $shadow-hover: 0 4px 15px 0 rgba(0, 0, 0, 0.35);
 $shadow-location: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 $shadow-card-rest: 0 5px 15px rgba(0, 0, 0, 0.15);
+$anim-dur: 1s;
+$anim-delay: calc($anim-dur / 4);
 
-/** MAPS **/
+/** MAPS & LISTS **/
 $font-size :(Title: 24px, Subtitle: 18px, Summary: 17px, Link: 16px, Detail: 15px, Badge: 14px);
 $font-weight :(Bold: 700, Medium: 500, Light: 300);
 $box-shadow: (head: 0 2px 4px 0 rgba(0, 0, 0, 0.15), button: 0 4px 10px 0 rgba(0, 0, 0, 0.25),hover: 0 4px 15px 0 rgba(0, 0, 0, 0.35), card: 0 4px 15px 0 rgba(0, 0, 0, 0.1), location: 0 4px 15px 0 rgba(0, 0, 0, 0.15), card-rest: 0 5px 15px rgba(0, 0, 0, 0.15));
@@ -126,7 +129,7 @@ $breakpoints: (mobile: 767px, tab: 1024px, desktop: 1440px);
 }
 
 @mixin desktop {
-    @media screen and (max-width: map-get($breakpoints, desktop)) and (min-width: map-get($breakpoints, tablet)){
+    @media screen and (min-width: map-get($breakpoints, tab)){
         padding: 30px 180px;
     } 
 }
@@ -197,14 +200,21 @@ body {
     align-items: center;
     z-index: 1;
     box-shadow: map-get($box-shadow, head);
+    @include desktop;
+    @include tablet;
+
     &__logo {
         padding: 10px 0;
         width: 162px;
         height: 44px;
-        @media screen and (min-width: map-get($breakpoints, tab)) {
+        @media screen and (min-width: map-get($breakpoints, mobile)) {
             width: 200px;
             height: 34px;
         }
+        @media screen and (min-width: map-get($breakpoints, tablet)) {
+            padding: 30px ;
+        }
+
     }
     &__back {
         color: $color-font-primary;
@@ -228,12 +238,37 @@ button {
     display: flex;
     flex-direction: column;
     padding: 22px 25px;
+    @media screen and (min-width: map-get($breakpoints, mobile)) {
+        flex-direction: row;
+        justify-content: flex-end;
+        padding: 64px 66px 30px 0;
+        align-items: center;
+        gap: 20px;
+    }
+    &__order1 {
+            @media screen and (min-width: map-get($breakpoints, mobile)) {
+            order: 3;
+            }
+        }
+    &__order2 {
+            @media screen and (min-width: map-get($breakpoints, mobile)) {
+                order: 1;
+            }
+        }
+    &__order3 {
+        @media screen and (min-width: map-get($breakpoints, mobile)) {
+            order: 2;
+        }
+    }
     &__title {
         font-family: Shrikhand, 'sans-serif';
         margin: 0;
         font-size: map-get($font-size, Subtitle);
         font-weight: 400;
         padding-bottom: 1em;
+        @media screen and (min-width: map-get($breakpoints, mobile)) {
+            padding: 0 0 0 9px;
+        }
     }
     &__content{
         list-style: none;
@@ -241,10 +276,11 @@ button {
         flex-direction: column;
         padding: 0;
         margin: 0;
-        @media screen and (min-width: map-get($breakpoints, tab)) {
+        @media screen and (min-width: map-get($breakpoints, mobile)) {
             flex-direction: row;
-            gap: 12px;
-            margin: 1em 0;
+            column-gap: 7px;
+            justify-content: space-between;
+            margin: 0;
         }
         & a{
             text-decoration: none;
@@ -254,7 +290,7 @@ button {
             display: grid;
             grid-template-columns: auto auto ;
             grid-template-rows: auto ;
-            gap: 7px;
+            gap: 11px;
             align-items: center;
             justify-items: start;
             justify-content: start;
@@ -269,9 +305,10 @@ button {
                 font-size: map-get($font-size, Badge);
             }
         }
+    
     }
-
 }
+
 
 /********* CONTENU INDEX ********/
 /**** LOCAL ****/
@@ -304,9 +341,9 @@ button {
         color: $color-font-primary;
         font-size: map-get($font-size, Title);
         font-weight: map-get($font-weight, Bold);
-        @media screen and (min-width: map-get($breakpoints, tab)){
+        @media screen and (min-width: map-get($breakpoints, mobile)){
             padding: 30px 0;
-            @include main-title;
+            @include heading-title;
         }
     }
 
@@ -316,7 +353,7 @@ button {
         font-size: map-get($font-size, Subtitle);
         color: $color-font-location;
         margin: 0;
-        @media screen and (min-width: map-get($breakpoints, tab)){
+        @media screen and (min-width: map-get($breakpoints, mobile)){
             padding-bottom: 30px;
         }
     }
@@ -340,7 +377,9 @@ button {
         flex-direction: row;
         flex-wrap: wrap;
         padding:30px 100px 50px;
-
+    @media screen and (min-width: map-get($breakpoints,tab)){
+        padding: 30px 180px 50px;
+    }
     }
     &__title {
         @include main-title;
@@ -409,9 +448,20 @@ button {
     justify-content: space-between;
     @include tablet;
     @include desktop;
+
+
     @media screen and (min-width: map-get($breakpoints, mobile)) {
         flex-direction: row;
+        flex-wrap: wrap;
+        padding: 30px 100px;
     }
+    @media screen and (min-width: map-get($breakpoints, tab)) {
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 30px 180px;
+    }
+
+
     &__title{
         padding-left: 3px;
         width: 100%;
@@ -426,6 +476,7 @@ button {
         width: 100%;
         @media screen and (min-width: map-get($breakpoints, mobile)) {
             flex-direction: row;
+            flex-wrap: wrap;
             row-gap: 50px;
             column-gap: 100px;
 
@@ -447,7 +498,6 @@ button {
     height: 251px;
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
     @include card;
     flex: 1 1 40%;
 
@@ -576,6 +626,12 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
 }
 
 /****** CONTENU PAGE RESTAURANT *******/
+.main-container{
+    &--color{
+        background: $color-white;
+    }
+}
+
 .image-hero {
     width: 100%;
     height: 237px;
@@ -604,6 +660,17 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
     background-color: $color-bg;
     box-sizing: border-box;
     align-items: center;
+    padding: 32px 13px 40px;
+    width: 100%;
+        @media screen and (min-width: map-get($breakpoints, mobile)) {
+            padding: 32px 160px 40px;
+            width: 75%;
+        }
+        @media screen and (min-width: map-get($breakpoints, tab)) {
+            padding: 32px 210px 40px;
+        }
+
+
     &__head {
         display: flex;
         flex-direction: row;
@@ -611,14 +678,18 @@ input[type="checkbox"]#like4:checked ~ .like-checked4 {
         gap: 40px;
         padding-right: 25px;
         box-sizing: border-box;
+        @media screen and (min-width: map-get($breakpoints, tab)) {
+            justify-content: space-between;
+            width: 75%;
+            gap: 24px;
+        }
+
         & .title {
             font-family: Shrikhand, sans-serif;
             font-size: 28px;
         }
     }  
 }
-$anim-dur: 1s;
-$anim-delay: calc($anim-dur / 4);
 
 .menu-section {
     width: 100%;
@@ -717,86 +788,4 @@ $anim-delay: calc($anim-dur / 4);
         transform: scaleX(1);
         visibility: visible;
     }
-}
-
-/******** MEDIA QUERIES *******/
-
-    
-/**** VERSION MOBILE ****/
-
-/**** PAGE RESTAURANTS ****/
-
-    .contenu {
-        z-index: 50;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .image-hero {
-        width: 100%;
-        height: 237px;
-        position: relative;
-        & img {
-            height: 275px;
-            width: 100%;
-            box-sizing: border-box;
-            object-fit: cover;
-        }
-    }
-    .menu {
-        padding: 32px 13px 40px;
-        width: 100%;
-        &__head {
-            width: 100%;
-            justify-content: space-between;
-        }  
-    }
-
-
-
-
-/**** VERSION TABLETTE & DESKTOP ****/
-@media screen and (min-width: 768px){
-
-/**** RESTAURANTS ****/
-/**** FOOTER ****/
-
-    .footer {
-        padding: 22px 34px;
-        flex-direction: row-reverse;
-        gap: 25px;
-        align-items: center;
-        @include footer;
-        &__content{
-            flex-direction: row;
-            column-gap: 35px;
-            justify-content: space-between;
-        }
-
-    }
-
-    /****** CONTENU PAGE RESTAURANT *******/
-
-    
-    .menu {
-        padding: 32px 210px 40px;
-        width: 75%;
-        &__head {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            gap: 24px;
-            box-sizing: border-box;
-            & .title {
-                font-family: Shrikhand, sans-serif;
-                font-size: 28px;
-            }
-        }  
-    }
-
-}
-
-@media screen and (min-width: 1024px) {
-    
 }
