--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,273 @@
 /** VARIABLES **/
 /** MAPS & LISTS **/
 /** MIXIN **/
+/**** LOCAL ****/
+.place {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+  gap: 17px;
+  color: #353535;
+  font-size: 16px;
+  font-weight: 500;
+  background: #EAEAEA;
+}
+.place__city {
+  text-decoration: none;
+  color: #353535;
+  padding-right: 10px;
+}
+
+/*** PRESENTATION ***/
+.presentation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 30px 25px;
+}
+.presentation__heading {
+  color: #000000;
+  font-size: 24px;
+  font-weight: 700;
+}
+@media (min-width: 767px) {
+  .presentation__heading {
+    padding: 30px 0;
+    margin: 0;
+    font-size: 40px;
+    font-weight: 700;
+    width: 100%;
+  }
+}
+.presentation__detail {
+  padding: 10px 0;
+  font-weight: 300;
+  font-size: 18px;
+  color: #353535;
+  margin: 0;
+}
+@media (min-width: 767px) {
+  .presentation__detail {
+    padding-bottom: 30px;
+  }
+}
+
+/*** FONCTIONNEMENT ***/
+.operation {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 25px;
+  width: 100%;
+  align-items: stretch;
+  box-sizing: border-box;
+  padding: 48px 20px 68px;
+}
+@media (min-width: 767px) {
+  .operation {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 30px 100px 50px;
+  }
+}
+@media (min-width: 1024px) {
+  .operation {
+    padding: 30px 180px 50px;
+  }
+}
+.operation__title {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 700;
+  width: 100%;
+  width: 100%;
+  margin: 0 0 2px;
+}
+@media (min-width: 767px) {
+  .operation__title {
+    padding-top: 20px;
+  }
+}
+.operation__step {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  height: 100%;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+@media (min-width: 767px) {
+  .operation__step {
+    width: 30%;
+    flex: 1 1 20%;
+  }
+}
+
+.step-detail {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: #F6F6F6;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+  gap: 20px;
+  flex-grow: 1;
+  flex-shrink: 1;
+  margin: 0 0 0 14px;
+  list-style: none;
+  padding: 10px 20px 10px 30px;
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+}
+.step-detail .fa-store {
+  color: #9356DC;
+}
+
+.step-order {
+  background: #9356DC;
+  padding: 3px 8px;
+  border-radius: 15px;
+  color: #fff;
+  position: absolute;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+/*** RESTAURANTS ***/
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 54px 18px 66px 17px;
+  gap: 25px;
+  box-sizing: border-box;
+  width: 100%;
+  justify-content: space-between;
+}
+@media (min-width: 767px) {
+  .restaurants {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 30px 100px;
+  }
+}
+@media (min-width: 1024px) {
+  .restaurants {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 30px 180px;
+  }
+}
+.restaurants__title {
+  padding-left: 3px;
+  width: 100%;
+  margin: 0;
+  font-size: 24px;
+  font-weight: 700;
+  width: 100%;
+}
+.restaurants__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  gap: 18px;
+  width: 100%;
+}
+@media (min-width: 767px) {
+  .restaurants__card {
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 50px;
+    column-gap: 100px;
+  }
+}
+
+.card {
+  position: relative;
+  display: grid;
+  grid-template-rows: 176px;
+  grid-template-columns: 1fr auto;
+  grid-template-areas: "image-card image-card" "txt-card like";
+  justify-content: space-between;
+  align-items: center;
+  height: 251px;
+  box-sizing: border-box;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
+  flex: 1 1 40%;
+}
+.card a {
+  text-decoration: none;
+  color: #000000;
+  height: 251px;
+  box-sizing: border-box;
+}
+.card__image {
+  grid-area: image-card;
+  width: 100%;
+  height: 176px;
+  box-sizing: border-box;
+}
+.card__image img {
+  object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  height: 100%;
+  width: 100%;
+}
+.card__image .box-new {
+  position: absolute;
+  top: 13px;
+  right: 12px;
+  padding: 6px 12px;
+  background-color: #99E2D0;
+  color: #008766;
+  border-radius: 2px;
+  font-size: 14px;
+  font-weight: 500;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
+}
+@media (min-width: 767px) {
+  .card__image .box-new {
+    right: 17px;
+  }
+}
+.card__content {
+  grid-area: txt-card;
+  height: 100%;
+  padding: 16px 0 12px 13px;
+  box-sizing: border-box;
+}
+@media (min-width: 767px) {
+  .card__content {
+    padding-left: 18px;
+  }
+}
+.card__content h3 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 700;
+}
+.card__content p {
+  margin: 0;
+  font-size: 17px;
+  font-weight: 300;
+}
+.card__like {
+  grid-area: like;
+  box-sizing: border-box;
+  padding-right: 25px;
+}
+
 /*** LOADER **/
 .loader-space {
   position: fixed;
